Add solution in info interface
