# python/graphscope/flex/rest/models/deployment_info.py
@@ -18,13 +18,10 @@ import pprint
 import re  # noqa: F401
 import json
 
-
-from typing import Any, ClassVar, Dict, List, Optional
 from pydantic import BaseModel, StrictStr, field_validator
-try:
-    from typing import Self
-except ImportError:
-    from typing_extensions import Self
+from typing import Any, ClassVar, Dict, List, Optional
+from typing import Optional, Set
+from typing_extensions import Self
 
 class DeploymentInfo(BaseModel):
     """
@@ -33,7 +30,8 @@ class DeploymentInfo(BaseModel):
     name: Optional[StrictStr] = None
     cluster_type: Optional[StrictStr] = None
     version: Optional[StrictStr] = None
-    __properties: ClassVar[List[str]] = ["name", "cluster_type", "version"]
+    solution: Optional[StrictStr] = None
+    __properties: ClassVar[List[str]] = ["name", "cluster_type", "version", "solution"]
 
     @field_validator('cluster_type')
     def cluster_type_validate_enum(cls, value):
@@ -41,8 +39,18 @@ class DeploymentInfo(BaseModel):
         if value is None:
             return value
 
-        if value not in ('HOSTS', 'KUBERNETES'):
+        if value not in set(['HOSTS', 'KUBERNETES']):
             raise ValueError("must be one of enum values ('HOSTS', 'KUBERNETES')")
+        return value
+
+    @field_validator('solution')
+    def solution_validate_enum(cls, value):
+        """Validates the enum"""
+        if value is None:
+            return value
+
+        if value not in set(['INTERACTIVE', 'GRAPHSCOPE_INSIGHT']):
+            raise ValueError("must be one of enum values ('INTERACTIVE', 'GRAPHSCOPE_INSIGHT')")
         return value
 
     model_config = {
@@ -62,7 +70,7 @@ class DeploymentInfo(BaseModel):
         return json.dumps(self.to_dict())
 
     @classmethod
-    def from_json(cls, json_str: str) -> Self:
+    def from_json(cls, json_str: str) -> Optional[Self]:
         """Create an instance of DeploymentInfo from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
@@ -76,16 +84,18 @@ class DeploymentInfo(BaseModel):
           were set at model initialization. Other fields with value `None`
           are ignored.
         """
+        excluded_fields: Set[str] = set([
+        ])
+
         _dict = self.model_dump(
             by_alias=True,
-            exclude={
-            },
+            exclude=excluded_fields,
             exclude_none=True,
         )
         return _dict
 
     @classmethod
-    def from_dict(cls, obj: Dict) -> Self:
+    def from_dict(cls, obj: Optional[Dict[str, Any]]) -> Optional[Self]:
         """Create an instance of DeploymentInfo from a dict"""
         if obj is None:
             return None
@@ -96,7 +106,8 @@ class DeploymentInfo(BaseModel):
         _obj = cls.model_validate({
             "name": obj.get("name"),
             "cluster_type": obj.get("cluster_type"),
-            "version": obj.get("version")
+            "version": obj.get("version"),
+            "solution": obj.get("solution")
         })
         return _obj
 
